--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
       <include src="./partials/site-nav.html"></include>
-      <include src="./partials/hero.html"></include>
+      <!-- <include src="./partials/hero.html"></include> -->
     <main>
       <include src="./partials/products.html"></include>
       <include src="./partials/manufacture.html"></include>
