--- a/src/index.html
+++ b/src/index.html
@@ -39,14 +39,16 @@
     <include src="./partials/page-footer.html"></include>
     <include src="./partials/modal.html"></include>
 
+    <!-- Скрипт библиотек js -->
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/count.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="./js/slick.min.js"></script>
   </body>
 </html>
